adds full biblio

--- a/docs/refs.bib
+++ b/docs/refs.bib
@@ -2,7 +2,7 @@
 % Encoding: Cp1252
 
 
-@article {Michalski2016,
+@article {michalski2016efficient,
 title = "Efficient computation of Sommerfeld integral tails methods and algorithms",
 journal = "Journal of Electromagnetic Waves and Applications",
 parent_itemid = "infobike://tandf/jew",
@@ -21,4 +21,19 @@ keyword = "Sommerfeld integral, extrapolation, Green function, double-exponentia
 author = "Michalski, Krzysztof A. and Mosig, Juan R.",
 abstract = "A review is presented of the most effective methods for the computation of Sommerfeld integral tails. Such integrals, which are often oscillatory, singular and divergent, commonly arise in layered media Green functions. The mathematical foundations of various pertinent methods are discussed
 in detail and their performance is illustrated by relevant numerical examples. The associated algorithms are given in pseudocode for their easy computer implementation.",
+}
+
+@article{golubovic2010fast,
+  author   = {Nićiforović, Ružica Golubović and Polimeridis, Athanasios G. and Mosig, Juan R.},
+  journal  = {IEEE Transactions on Antennas and Propagation},
+  title    = {Fast Computation of Sommerfeld Integral Tails via Direct Integration Based on Double Exponential-Type Quadrature Formulas},
+  year     = {2011},
+  volume   = {59},
+  number   = {2},
+  pages    = {694-699},
+  abstract = {A direct integration algorithm, based on double exponential-type quadrature rules, is presented for the efficient computation of the Sommerfeld integral tails, arising in the evaluation of multilayered Green's functions. The proposed scheme maintains the error controllable nature of the so-called partition-extrapolation methods, often used to tackle this problem, whereas it requires substantially reduced computational time. Moreover, the proposed method is very easy to implement, since the associated weights and abscissas can be precomputed. The overall behavior of the proposed method both in terms of accuracy and efficiency is demonstrated through a series of representative numerical experiments, where compared with one of the most proven methods available in the literature.},
+  keywords = {},
+  doi      = {10.1109/TAP.2010.2096187},
+  issn     = {1558-2221},
+  month    = {Feb}
 }
